# mcp-server

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  README_cn.md  config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
.mcp/: alarm-cli-create.toml  config-generator.toml  config.toml
doc/: CONNECTION_REFERENCE.md  client_sse.md  client_sse_refactor.md  goal-01-project-setup-config.md  goal-02-mcp-protocol.md  goal-03-command-executor.md  goal-04-http-server.md  goal-05-http-executor.md  goal-06-direct-command.md  goal-07-json-schema.md  goal-08-stdio-transport.md  goal-09-assistant-project-setup.md  goal-10-help-recursive-parsing.md  goal-11-vllm-toml-generation.md  goal-12-parameter-arg-mapping.md  goal-13-json-to-toml-generation.md  goal-14-workspace-and-builtin-tools.md  requirements.md  server_sse_liveness.md
examples/: client_stdio.rs  config-generator.toml
mcp-tool-generator/: Cargo.toml
mcp-tool-generator/src/: config.rs  crawler.rs  lib.rs  llm_client.rs  main.rs  mcp_client.rs  prompt.rs  toml_output.rs  types.rs
res/: cargo_build_help  cargo_help  mcp-tool.toml
scripts/: bump-version.ps1  bump-version.sh
src/: lib.rs  main.rs  security.rs
src/client/: mod.rs  sse_client.rs
src/config/: mod.rs  prompt.rs  schema.rs  server.rs  tool.rs
src/executor/: command.rs  http.rs  mod.rs
src/protocol/: handler.rs  mod.rs  types.rs
src/transport/: http.rs  mod.rs  sse.rs  stdio.rs
tools.d/: cargo_build.toml  cargo_build_llm.toml  mcp-tool.toml  test.toml
tools.d/cargo/: cargo_build.toml
