[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mcp"
path = "src/main.rs"

[[bin]]
name = "mcp-client"
path = "src/bin/client.rs"

[dependencies]
actix-web = "4.13.0"
async-stream = "0.3.6"
bytes = "1.11.1"
clap = { version = "4", features = ["derive"] }
dashmap = "6.1.0"
path-clean = "1.0.1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
futures = "0.3"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "process", "time", "io-util", "io-std"] }
toml = "1.0.7"
urlencoding = "2.1.3"
uuid = { version = "1.22.0", features = ["v4"] }
custom-utils = "0.10.21"
log = "0.4.29"
[workspace]
members = [
    ".",
    "mcp-tool-generator"
]
resolver = "2"
