[package]
name = "mcp"
description = "MCP implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
#license-file = "LICENSE"
authors.workspace = true
documentation = "https://docs.rs/mcp"
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "mcp"
path = "src/main.rs"

[[bin]]
name = "mcp-client"
path = "src/bin/client.rs"

[dependencies]
actix-web = "4.13.0"
async-stream = "0.3.6"
bytes = "1.11.1"
clap = { version = "4", features = ["derive"] }
dashmap = "6.1.0"
path-clean = "1.0.1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
futures = "0.3"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "process", "time", "io-util", "io-std"] }
toml = "1.0.7"
urlencoding = "2.1.3"
uuid = { version = "1.22.0", features = ["v4"] }
custom-utils = "0.10.21"
log = "0.4.29"
flexi_logger = "0.31.8"
[workspace]
members = [
    ".",
    "mcp-tool-generator"
]
resolver = "2"

[workspace.package]
version = "0.1.4"          # ← 这里统一设置你想要的版本
edition = "2024"           # 推荐也一起继承
license = "MIT"
#license-file = "LICENSE"
authors = ["fengqi <huangjiemin@gmail.com>"]
documentation = "https://docs.rs/mcp"
homepage = "https://github.com/jm-observer/mcp-server"
repository = "https://github.com/jm-observer/mcp-server"
