
[workspace]
members = [
    ".",
    "mcp-tool-generator"
]
resolver = "2"

[workspace.package]
version = "0.2.1"          # ← 这里统一设置你想要的版本
edition = "2024"           # 推荐也一起继承
license = "MIT"
#license-file = "LICENSE"
authors = ["fengqi <huangjiemin@gmail.com>"]
documentation = "https://docs.rs/mcp"
homepage = "https://github.com/jm-observer/mcp-server"
repository = "https://github.com/jm-observer/mcp-server"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
custom-utils = { version = "0.13", default-features = false, features = ["logger", "updater"] }
log = "0.4.29"
mcp = { path = "." }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "process", "time", "io-util", "io-std"] }
toml = "1.0.7"
uuid = { version = "1.22.0", features = ["v4"] }

[package]
name = "mcp"
description = "MCP implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
#license-file = "LICENSE"
authors.workspace = true
documentation = "https://docs.rs/mcp"
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "mcp"
path = "src/main.rs"

[[example]]
name = "client_stdio"
path = "examples/client_stdio.rs"

[[example]]
name = "client_sse"
path = "examples/client_sse.rs"

[[example]]
name = "client_test"
path = "examples/client_test.rs"

[[example]]
name = "client_http"
path = "examples/client_http.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
custom-utils.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
actix-web = "4.13.0"
async-stream = "0.3.6"
bytes = "1.11.1"
dashmap = "6.1.0"
path-clean = "1.0.1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
futures = "0.3"
schemars = "1.2.1"
thiserror = "2.0.18"
url = "2"
urlencoding = "2.1.3"
mime_guess = "2"
flexi_logger = "0.31.8"

[features]
default = []
prod = ["custom-utils/prod"]
