[package]
name = "mcp-tool-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
log = "0.4.29"
custom-utils = "0.10.21"
mcp-server = { version = "0.1.0", path = ".." }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "process", "io-util", "io-std"] }
toml = "1.0.7"
uuid = { version = "1.22.0", features = ["v4"] }
async-openai = { version = "0.33.1", features = ["chat-completion"] }

[[bin]]
name = "extract_subcommand_by_llm"
path = "src/bin/extract_subcommand_by_llm.rs"

[[bin]]
name = "generate_tool_toml"
path = "src/bin/generate_tool_toml.rs"

[[bin]]
name = "deserialize_tool_toml"
path = "src/bin/deserialize_tool_toml.rs"

[[bin]]
name = "extract_tool_action_by_llm"
path = "src/bin/extract_tool_action_by_llm.rs"
