[package]
name = "mcp-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
#license-file = "LICENSE"
authors.workspace = true
documentation = "https://docs.rs/mcp"
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
log = "0.4.29"
custom-utils = "0.10.21"
mcp = { path = ".." }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "process", "io-util", "io-std"] }
toml = "1.0.7"
uuid = { version = "1.22.0", features = ["v4"] }
async-openai = { version = "0.33.1", features = ["chat-completion"] }

[[bin]]
name = "extract_subcommand_by_llm"
path = "src/bin/extract_subcommand_by_llm.rs"

[[bin]]
name = "generate_tool_toml"
path = "src/bin/generate_tool_toml.rs"

[[bin]]
name = "deserialize_tool_toml"
path = "src/bin/deserialize_tool_toml.rs"

[[bin]]
name = "extract_tool_action_by_llm"
path = "src/bin/extract_tool_action_by_llm.rs"

[features]
default = []
prod = ["custom-utils/prod"]
