[package]
name = "mcp-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
#license-file = "LICENSE"
authors.workspace = true
documentation = "https://docs.rs/mcp"
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
custom-utils.workspace = true
log.workspace = true
mcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
async-openai = { version = "0.33.1", features = ["chat-completion"] }

[[bin]]
name = "extract_subcommand_by_llm"
path = "src/bin/extract_subcommand_by_llm.rs"

[[bin]]
name = "generate_tool_toml"
path = "src/bin/generate_tool_toml.rs"

[[bin]]
name = "deserialize_tool_toml"
path = "src/bin/deserialize_tool_toml.rs"

[[bin]]
name = "extract_tool_action_by_llm"
path = "src/bin/extract_tool_action_by_llm.rs"

[features]
default = []
prod = ["custom-utils/prod"]
